# MRD

./: .envrc  .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh
src/: bsdf.py  config.py  image_processing.py  main.py  model.py  plot.py  scenes.py  shape.py  utils.py
