[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MRD"
version = "0.1.0"
description = "Environment for MRD (Metamers Rendered Differentiably)"
authors = [{name = "Benjamin Beilharz", email = "b@ben.graphics"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cholespy>=2.1.0",
    "diffusers>=0.35.1",
    "gpytoolbox>=0.3.7",
    "lpips>=0.1.4",
    "mitsuba>=3.7.1",
    "modelvshuman",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.2",
    "scipy-stubs~=1.15.0",
    "torchmetrics>=1.7.3",
    "transformers>=4.52.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.sources]
modelvshuman = { path = "vendor/model-vs-human" }

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "wandb[media]>=0.21.4",
]
